<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/sea_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_calc_vertical"
            android:layout_marginLeft="@dimen/margin_left_right_calc_vertical"
            android:layout_marginRight="@dimen/margin_left_right_calc_vertical"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_field"
                android:gravity="end"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_result"
                android:textStyle="bold"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/operations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_field"
                android:gravity="end"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_operation"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/btn_numbers"
                    android:text="@string/_1"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_2"
                    style="@style/btn_numbers"
                    android:layout_marginStart="@dimen/universal_margin"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_3"
                    style="@style/btn_numbers"
                    android:layout_marginStart="@dimen/universal_margin"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_split"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/split"
                    style="@style/btn_elements"
                    android:layout_marginStart="@dimen/universal_margin"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_4"
                    style="@style/btn_numbers"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/btn_numbers"
                    android:text="@string/_5"
                    android:layout_marginStart="@dimen/universal_margin"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/btn_numbers"
                    android:text="@string/_6"
                    android:layout_marginStart="@dimen/universal_margin"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_multiply"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/multiply"
                    style="@style/btn_elements"
                    android:layout_marginStart="@dimen/universal_margin"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_7"
                    style="@style/btn_numbers"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_8"
                    style="@style/btn_numbers"
                    android:layout_marginStart="@dimen/universal_margin"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_9"
                    style="@style/btn_numbers"
                    android:layout_marginStart="@dimen/universal_margin"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_subtract"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/subtract"
                    style="@style/btn_elements"
                    android:layout_marginStart="@dimen/universal_margin"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/_0"
                    style="@style/btn_numbers"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_dot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dot"
                    style="@style/btn_elements"
                    android:layout_marginStart="@dimen/universal_margin"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_augment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/augment"
                    style="@style/btn_elements"
                    android:layout_marginStart="@dimen/universal_margin"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_discard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/discard"
                    style="@style/btn_red_zone"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/delete"
                    style="@style/btn_red_zone"
                    android:layout_marginStart="@dimen/universal_margin"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_equally"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/equally"
                    style="@style/btn_green_zone"
                    android:layout_marginStart="@dimen/universal_margin"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>